--- a/SDL_LockSurface.mediawiki
+++ b/SDL_LockSurface.mediawiki
@@ -21,30 +21,16 @@ Returns 0 on success or a negative error code on failure; call [[SDL_GetError]](
 
 == Code Examples ==
 ```c++
-SDL_Surface* surface = NULL;
-
-/* Assign a surface pointer to surface */
+/* Make the pixels pointer valid in the surface */
 
 SDL_LockSurface( surface );
 
 /* Surface is locked */
 /* Direct pixel access on surface here */
 
-SDL_LockSurface( surface );
-
-/* More direct pixel access on surface */
-
 SDL_UnlockSurface( surface );
 
-/* Surface is still locked */
-/* Note: In versions < 1.1.8, the surface would have been */
-/* no longer locked at this stage                         */
-
-SDL_UnlockSurface( surface );
 /* Surface is now unlocked */
-
-SDL_FreeSurface( surface );
-surface = NULL;
 ```
 
 
