--- a/SDL_LockSurface.mediawiki
+++ b/SDL_LockSurface.mediawiki
@@ -37,9 +37,10 @@ SDL_UnlockSurface( surface );
 == Remarks ==
 Between calls to [[SDL_LockSurface]]() / [[SDL_UnlockSurface]](), you can write to and read from <code>surface->pixels</code>, using the pixel format stored in <code>surface->format</code>. Once you are done accessing the surface, you should use [[SDL_UnlockSurface]]() to release it.
 
-Not all surfaces require locking. If SDL_MUSTLOCK(surface) evaluates to 0, then you can read and write to the surface at any time, and the pixel format of the surface will not change.
+Not all surfaces require locking. If [[SDL_MUSTLOCK]](surface) evaluates to 0, then you can read and write to the surface at any time, and the pixel format of the surface will not change.
 
 == Related Functions ==
+:[[SDL_MUSTLOCK]]
 :[[SDL_UnlockSurface]]
 
 ----
