--- a/SDL_SoftStretch.mediawiki
+++ b/SDL_SoftStretch.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_SoftStretch =
 Use this function to perform a fast, low quality, stretch blit between two surfaces of the same pixel format.
@@ -17,16 +16,16 @@ int SDL_SoftStretch(SDL_Surface*    src,
 == Function Parameters ==
 {|
 |'''src'''
-|the [[SDL_Surface]] structure containing '''srcrect''' / the source rectangle
+|the [[SDL_Surface]] structure to be copied from
 |-
 |'''srcrect'''
-|the [[SDL_Rect]] structure representing the source rectangle
+|the [[SDL_Rect]] structure representing the rectangle to be copied, or NULL to copy the entire surface
 |-
 |'''dst'''
-|the [[SDL_Surface]] structure containing '''dstrect''' / the destination rectangle
+|the [[SDL_Surface]] structure that is the blit target
 |-
 |'''dstrect'''
-|the [[SDL_Rect]] structure representing the rectangle to be filled with/by the blit
+|the [[SDL_Rect]] structure representing the rectangle that is copied into
 |}
 
 == Return Value ==
@@ -41,6 +40,7 @@ You can add your code example here
 This function uses a static buffer and is not thread-safe.
 
 == Related Functions ==
+:[[SDL_BlitSurface]]
 
 ----
 [[CategoryAPI]], [[CategorySurface]]
