--- a/SDL_LowerBlit.mediawiki
+++ b/SDL_LowerBlit.mediawiki
@@ -17,20 +17,17 @@ int SDL_LowerBlit(SDL_Surface* src,
 == Function Parameters ==
 {|
 |'''src'''
-|the [[SDL_Surface]] structure containing '''srcrect''' / the source rectangle
+|the [[SDL_Surface]] structure to be copied from
 |-
 |'''srcrect'''
-|the [[SDL_Rect]] structure ^representing / describing^ ,,containing,, the source pixels
+|the [[SDL_Rect]] structure representing the rectangle to be copied, or NULL to copy the entire surface
 |-
 |'''dst'''
-|the [[SDL_Surface]] structure containing '''dstrect''' / the destination rectangle
+|the [[SDL_Surface]] structure that is the blit target
 |-
 |'''dstrect'''
-|the [[SDL_Rect]] structure to be filled ^with / by the blit^
+|the [[SDL_Rect]] structure representing the rectangle that is copied into
 |}
-
-
-<<Color2(green,Note: This should probably end up looking a lot like BlitSurface after it is edited.)>>
 
 == Return Value ==
 Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
