--- a/SDL_AllocRW.mediawiki
+++ b/SDL_AllocRW.mediawiki
@@ -12,7 +12,7 @@ SDL_RWops* SDL_AllocRW(void)
 ```
 
 == Return Value ==
-*Returns a pointer to the allocated memory on success, or NULL on error. *
+*Returns a pointer to ,,the allocated memory on success,, ^a data stream^, or NULL on error. *
 
 == Code Examples ==
 *<br/>
