--- a/CategoryEvents.mediawiki
+++ b/CategoryEvents.mediawiki
@@ -2,7 +2,6 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
-'''DRAFT'''
 
 = Event Handling =
 
@@ -17,9 +16,9 @@ SDL_Init(SDL_INIT_VIDEO);
 ```
  (''see'' [http://wiki.libsdl.org/moin.cgi/CategoryInit Initialization & Shutdown] and [[SDL_Init]]() ''for details'')
 
-Internally, SDL stores all the events waiting to be handled in an event queue. Using functions like [[SDL_PollEvent]](), [[SDL_PeepEvents]]() and [[SDL_WaitEvent]]() you can observe and handle waiting input events.
+Internally, SDL stores all the events waiting to be handled in an event queue.  Using functions like [[SDL_PollEvent]](), [[SDL_PeepEvents]]() and [[SDL_WaitEvent]]() you can observe and handle waiting input events.
 
-The key to event handling in SDL is the [[SDL_Event]] union. The event queue itself is composed of a series of [[SDL_Event]] unions, one for each waiting event. [[SDL_Event]] unions are read from the queue with the [[SDL_PollEvent]]() function and it is then up to the application to process the information stored with them. 
+The event queue itself is composed of a series of [[SDL_Event]] structures, one for each waiting event. [[SDL_Event]] structures are read from the queue with the [[SDL_PollEvent]]() function and it is then up to the application to process the information stored with them. 
 
 == Enumerations ==
 <<FullSearch(category:CategoryEnum CategoryEvents)>>
