--- a/SDL_WindowEventID.mediawiki
+++ b/SDL_WindowEventID.mediawiki
@@ -62,4 +62,4 @@ You can add your code example here
 :[[SDL_WindowEvent]]
 
 ----
-[[CategoryEnum]], [[CategoryVideo]], [[CategoryEvent]]
+[[CategoryEnum]], [[CategoryVideo]], [[CategoryEvents]]
