--- a/SDL_WindowEvent.mediawiki
+++ b/SDL_WindowEvent.mediawiki
@@ -56,4 +56,4 @@ You can add your code example here
 == Related Functions ==
 
 ----
-[[CategoryStruct]], [[CategoryEvents]]
+[[CategoryStruct]], [[CategoryEvents]], [[CategoryVideo]]
