--- a/SDL_Event.mediawiki
+++ b/SDL_Event.mediawiki
@@ -102,6 +102,53 @@ You can add your code example here
 == Remarks ==
 The [[SDL_Event]] structure is the core to all event handling in SDL. [[SDL_Event]] is a union of all event structures used in SDL.  Using it is a simple matter of knowing which union member relates to which event type. 
 
+The [[SDL_Event]] structure has two uses:
+* Reading events on the event queue
+* Placing events on the event queue 
+
+Reading events from the event queue is done with either [[SDL_PollEvent]]() or [[SDL_PeepEvents]](). We'll use [[SDL_PollEvent]]() and step through an example.
+
+First off, we create an empty [[SDL_Event]] structure.
+```c++
+SDL_Event test_event;
+```
+[[SDL_PollEvent]]() removes the next event from the event queue.  If there are no events on the queue it returns 0, otherwise it returns 1. We use a ```while``` loop to process each event in turn. 
+```c++
+while(SDL_PollEvent(&test_event)) {
+```
+The [[SDL_PollEvent]]() function takes a pointer to an [[SDL_Event]] structure that is to be filled with event information. We know that if [[SDL_PollEvent]]() removes an event from the queue then the event information will be placed in our test_event structure, but we also know that the type of event will be placed in the '''type''' member of test_event. So to handle each event type separately we use a ```switch``` statement.
+```#!highlightcpp
+  switch(test_event.type) {
+```
+We need to know what kind of events we're looking for and the event types of those events. So let's assume we want to detect where the user is moving the mouse pointer within our application. We look through our event types and notice that SDL_MOUSEMOTION is, more than likely, the event we're looking for. Looking at the [[#table|table]] below tells us that SDL_MOUSEMOTION events are handled within the [[SDL_MouseMotionEvent]] structure which is the '''motion''' member of [[SDL_Event]]. We can check for the SDL_MOUSEMOTION event '''type''' within our ```switch``` statement like so:
+```c++
+    case SDL_MOUSEMOTION:
+```
+All we need do now is read the information out of the '''motion''' member of test_event. 
+```c++
+      printf("We got a motion event.\n");
+      printf("Current mouse position is: (%d, %d)\n", test_event.motion.x, test_event.motion.y);
+      break;
+    default:
+      printf("Unhandled Event!\n");
+      break;
+  }
+}
+printf("Event queue empty.\n");
+```
+
+It is also possible to push events onto the event queue and so use it as a two-way communication path. Both [[SDL_PushEvent]]() and [[SDL_PeepEvents]]() allow you to place events onto the event queue. This is usually used to place a SDL_USEREVENT on the event queue, however you could use it to post fake input events if you wished. Creating your own events is a simple matter of choosing the event type you want, setting the '''type''' member and filling the appropriate member structure with information. 
+```c++
+SDL_Event user_event;
+
+user_event.type=SDL_USEREVENT;
+user_event.user.code=2;
+user_event.user.data1=NULL;
+user_event.user.data2=NULL;
+SDL_PushEvent(&user_event);
+```
+
+<span id="table"></span>
 {|
 |<bgcolor="#EDEDED">''Event Type''
 |<bgcolor="#EDEDED">''Event Structure''
@@ -188,60 +235,31 @@ The [[SDL_Event]] structure is the core to all event handling in SDL. [[SDL_Even
 |'''window'''
 |}
 
-
-The [[SDL_Event]] structure has two uses:
-* Reading events on the event queue
-* Placing events on the event queue 
-
-Reading events from the event queue is done with either [[SDL_PollEvent]]() or [[SDL_PeepEvents]](). We'll use [[SDL_PollEvent]]() and step through an example.
-
-First off, we create an empty [[SDL_Event]] structure.
-```c++
-SDL_Event test_event;
-```
-[[SDL_PollEvent]]() removes the next event from the event queue.  If there are no events on the queue it returns 0, otherwise it returns 1. We use a ```while``` loop to process each event in turn. 
-```c++
-while(SDL_PollEvent(&test_event)) {
-```
-The [[SDL_PollEvent]]() function takes a pointer to an [[SDL_Event]] structure that is to be filled with event information. We know that if [[SDL_PollEvent]]() removes an event from the queue then the event information will be placed in our test_event structure, but we also know that the type of event will be placed in the '''type''' member of test_event. So to handle each event type separately we use a ```switch``` statement.
-```#!highlightcpp
-  switch(test_event.type) {
-```
-We need to know what kind of events we're looking for and the event types of those events. So let's assume we want to detect where the user is moving the mouse pointer within our application. We look through our event types and notice that SDL_MOUSEMOTION is, more than likely, the event we're looking for. A little more research tells us that SDL_MOUSEMOTION events are handled within the [[SDL_MouseMotionEvent]] structure which is the '''motion''' member of [[SDL_Event]]. We can check for the SDL_MOUSEMOTION event '''type''' within our ```switch``` statement like so:
-```c++
-    case SDL_MOUSEMOTION:
-```
-All we need do now is read the information out of the '''motion''' member of test_event. 
-```c++
-      printf("We got a motion event.\n");
-      printf("Current mouse position is: (%d, %d)\n", test_event.motion.x, test_event.motion.y);
-      break;
-    default:
-      printf("Unhandled Event!\n");
-      break;
-  }
-}
-printf("Event queue empty.\n");
-```
-
-It is also possible to push events onto the event queue and so use it as a two-way communication path. Both [[SDL_PushEvent]]() and [[SDL_PeepEvents]]() allow you to place events onto the event queue. This is usually used to place a SDL_USEREVENT on the event queue, however you could use it to post fake input events if you wished. Creating your own events is a simple matter of choosing the event type you want, setting the '''type''' member and filling the appropriate member structure with information. 
-```c++
-SDL_Event user_event;
-
-user_event.type=SDL_USEREVENT;
-user_event.user.code=2;
-user_event.user.data1=NULL;
-user_event.user.data2=NULL;
-SDL_PushEvent(&user_event);
-```
-
 == Related Enumerations ==
 :[[SDL_EventType]]
 
 == Related Structures ==
-:[[SDL_StructureRemoveSectionIfEmpty]]
+:[[SDL_ActiveEvent]]
+:[[SDL_DollarGestureEvent]]
+:[[SDL_JoyAxisEvent]]
+:[[SDL_JoyBallEvent]]
+:[[SDL_JoyButtonEvent]]
+:[[SDL_JoyHatEvent]]
+:[[SDL_KeyboardEvent]]
+:[[SDL_MouseButtonEvent]]
+:[[SDL_MouseMotionEvent]]
+:[[SDL_MouseWheelEvent]]
+:[[SDL_MultiGestureEvent]]
+:[[SDL_QuitEvent]]
+:[[SDL_ResizeEvent]]
+:[[SDL_SysWMEvent]]
+:[[SDL_TextEditingEvent]]
+:[[SDL_TextInputEvent]]
+:[[SDL_TouchFingerEvent]]
+:[[SDL_TouchButtonEvent]]
+:[[SDL_UserEvent]]
+:[[SDL_WindowEvent]]
 
-<<Color2(green,Should all the events.h structures be listed here?  Yes)>>
 
 == Related Functions ==
 :[[SDL_PeepEvents]]
