--- a/SDL_Event.mediawiki
+++ b/SDL_Event.mediawiki
@@ -100,11 +100,14 @@ You can add your code example here
 ```
 
 == Remarks ==
-The [[SDL_Event]] structure is the core to all event handling in SDL. [[SDL_Event]] is a union of all event structures used in SDL.  Using it is a simple matter of knowing which union member relates to which event type. The [[#table|table]] below lists these relationships.
+The [[SDL_Event]] structure is the core of all event handling in SDL. [[SDL_Event]] is a union of all event structures used in SDL.  Using it is a simple matter of knowing which union member relates to which event type. The [[#table|table]] below lists these relationships.
 
 The [[SDL_Event]] structure has two uses:
-* Reading events on the event queue
-* Placing events on the event queue 
+* [[#reading|Reading events from the event queue]]
+* [[#push|Placing events on the event queue]]
+
+<span id="reading"></span>
+__Reading events from the event queue__
 
 Reading events from the event queue is done with either [[SDL_PollEvent]]() or [[SDL_PeepEvents]](). We'll use [[SDL_PollEvent]]() and step through an example.
 
@@ -136,6 +139,10 @@ All we need do now is read the information out of the '''motion''' member of tes
 }
 printf("Event queue empty.\n");
 ```
+
+
+<span id="push"></span>
+__Placing events on the event queue__
 
 It is also possible to push events onto the event queue and so use it as a two-way communication path. Both [[SDL_PushEvent]]() and [[SDL_PeepEvents]]() allow you to place events onto the event queue. This is usually used to place a SDL_USEREVENT on the event queue, however you could use it to post fake input events if you wished. Creating your own events is a simple matter of choosing the event type you want, setting the '''type''' member and filling the appropriate member structure with information. 
 ```c++
