--- a/SDL_Event.mediawiki
+++ b/SDL_Event.mediawiki
@@ -105,10 +105,9 @@ The [[SDL_Event]] structure is the core of all event handling in SDL. [[SDL_Even
 The [[SDL_Event]] structure has two uses:
 * [[#reading|Reading events from the event queue]]
 * [[#push|Placing events on the event queue]]
-<br/>
-<br/>
+
 <span id="reading"></span>
-__Reading events from the event queue__
+~+Reading events from the event queue+~
 
 Reading events from the event queue is done with either [[SDL_PollEvent]]() or [[SDL_PeepEvents]](). We'll use [[SDL_PollEvent]]() and step through an example.
 
@@ -140,10 +139,10 @@ All we need do now is read the information out of the '''motion''' member of tes
 }
 printf("Event queue empty.\n");
 ```
-<br/>
-<br/>
+
+
 <span id="push"></span>
-__Placing events on the event queue__
+~+Placing events on the event queue+~
 
 It is also possible to push events onto the event queue and so use it as a two-way communication path. Both [[SDL_PushEvent]]() and [[SDL_PeepEvents]]() allow you to place events onto the event queue. This is usually used to place a SDL_USEREVENT on the event queue, however you could use it to post fake input events if you wished. Creating your own events is a simple matter of choosing the event type you want, setting the '''type''' member and filling the appropriate member structure with information. 
 ```c++
@@ -155,10 +154,9 @@ user_event.user.data1=NULL;
 user_event.user.data2=NULL;
 SDL_PushEvent(&user_event);
 ```
-<br/>
-<br/>
+
 <span id="table"></span>
-__Relationships between event types and union members__
+~+Relationships between event types and union members+~
 {|
 |<bgcolor="#EDEDED">''Event Type''
 |<bgcolor="#EDEDED">''Event Structure''
