--- a/SDL_Event.mediawiki
+++ b/SDL_Event.mediawiki
@@ -107,7 +107,7 @@ The [[SDL_Event]] structure has two uses:
 * [[#push|Placing events on the event queue]]
 
 <span id="reading"></span>
-~+Reading events from the event queue+~
+~+'''Reading events from the event queue'''+~
 
 Reading events from the event queue is done with either [[SDL_PollEvent]]() or [[SDL_PeepEvents]](). We'll use [[SDL_PollEvent]]() and step through an example.
 
@@ -142,7 +142,7 @@ printf("Event queue empty.\n");
 
 
 <span id="push"></span>
-~+Placing events on the event queue+~
+~+'''Placing events on the event queue'''+~
 
 It is also possible to push events onto the event queue and so use it as a two-way communication path. Both [[SDL_PushEvent]]() and [[SDL_PeepEvents]]() allow you to place events onto the event queue. This is usually used to place a SDL_USEREVENT on the event queue, however you could use it to post fake input events if you wished. Creating your own events is a simple matter of choosing the event type you want, setting the '''type''' member and filling the appropriate member structure with information. 
 ```c++
@@ -156,7 +156,7 @@ SDL_PushEvent(&user_event);
 ```
 
 <span id="table"></span>
-~+Relationships between event types and union members+~
+~+'''Relationships between event types and union members'''+~
 {|
 |<bgcolor="#EDEDED">''Event Type''
 |<bgcolor="#EDEDED">''Event Structure''
