--- a/SDL_TouchFingerEvent.mediawiki
+++ b/SDL_TouchFingerEvent.mediawiki
@@ -18,7 +18,7 @@ A structure that contains touch finger motion,,/finger event structure,, ^inform
 |-
 |SDL_TouchID
 |'''touchId'''
-|the touch device id
+|the touch device ,,id,, ^index^
 |-
 |SDL_FingerID
 |'''fingerId'''
@@ -61,7 +61,7 @@ A structure that contains touch finger motion,,/finger event structure,, ^inform
 |description
 |}
 
-<<Color2(green,Note that touchID is described as "the touch device index" in SDL_TouchButtonEvent.  They should be consistent.  Also note that SDL_TouchID and SDL_FingerID are not defined in this header.)>>
+<<Color2(green,Note that touchID is described as "the touch device index" in all 3 other similar functions.  Also note that SDL_TouchID and SDL_FingerID are not defined in this header.)>>
 
 == Code Examples ==
 ```c++
