update content - changeset 4949 const

--- a/SDL_UpperBlit.mediawiki
+++ b/SDL_UpperBlit.mediawiki
@@ -8,10 +8,10 @@ Use this function to perform a fast blit from the source surface to the destinat
 
 == Syntax ==
 ```c++
-int SDL_UpperBlit(SDL_Surface* src,
-                  SDL_Rect*    srcrect,
-                  SDL_Surface* dst,
-                  SDL_Rect*    dstrect)
+int SDL_UpperBlit(SDL_Surface*    src,
+                  const SDL_Rect* srcrect,
+                  SDL_Surface*    dst,
+                  SDL_Rect*       dstrect)
 
 ```
 
