--- a/SDL_Event.mediawiki
+++ b/SDL_Event.mediawiki
@@ -99,7 +99,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-The [[SDL_Event]] structure is the core of all event handling in SDL. [[SDL_Event]] is a union of all event structures used in SDL.  Using it is a simple matter of knowing which union member relates to which event type. The [[#table|table]] below lists these relationships.
+The [[SDL_Event]] structure is the core of all event handling in SDL. [[SDL_Event]] is a union of all event structures used in SDL.  Using it is a simple matter of knowing which event type corresponds to which union member. The [[#table|table]] below lists these relationships.
 
 The [[SDL_Event]] structure has two uses:
 * [[#reading|Reading events from the event queue]]
