--- a/SDL_JoyBallEvent.mediawiki
+++ b/SDL_JoyBallEvent.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_JoyBallEvent =
-A structure that contains joystick trackball motion event ,,structure,, ^information^ (event.jball.*).
+A structure that contains joystick trackball motion event information.
 
 
 == Data Fields ==
@@ -14,19 +14,11 @@ A structure that contains joystick trackball motion event ,,structure,, ^informa
 |-
 |Uint8
 |'''which'''
-|the joystick device index ^*the index of the joystick that reported the event*^
+|the index of the joystick that reported the event
 |-
 |Uint8
 |'''ball'''
-|the joystick trackball index ^*the index of the trackball*^
-|-
-|Uint8
-|'''padding1'''
-|^8 empty bits to total 32^???
-|-
-|Uint8
-|'''padding2'''
-|^8 empty bits to total 32^???
+|the index of the trackball that changed
 |-
 |int
 |'''xrel'''
@@ -43,9 +35,16 @@ You can add your code example here
 ```
 
 == Remarks ==
-*<br/>[[SDL_JoyBallEvent]]() is a member of the [[SDL_Event]] union and is used when an event of type SDL_JOYBALLMOTION is reported.
+[[SDL_JoyBallEvent]] is a member of the [[SDL_Event]] structure and is used when an event of type SDL_JOYBALLMOTION is reported.
 
-A SDL_JOYBALLMOTION event occurs when a user moves a trackball on the joystick. ,,The field '''which''' is the index of the joystick that reported the event and '''ball''' is the index of the trackball,, <<Color2(orange,(for a more detailed explanation see the Joystick section))>>. Trackballs only return relative motion, <<Color2(green,suggest a hyphen here instead of a comma)>> this is the change in position on the ball since it was last polled (last cycle of the event loop) <<Color2(green,suggest a hyphen here)>> and it is stored in '''xrel''' and '''yrel'''.<br/>*
+An SDL_JOYBALLMOTION event occurs when a user moves a trackball on the joystick.
+
+Trackballs only return relative motion. This is the change in position of the ball since it was last polled (last cycle of the event loop).
+
+== Related Structures ==
+:[[SDL_JoyAxisEvent]]
+:[[SDL_JoyButtonEvent]]
+:[[SDL_JoyHatEvent]]
 
 == Related Functions ==
 :[[SDL_JoystickEventState]]
