--- a/SDL_JoyAxisEvent.mediawiki
+++ b/SDL_JoyAxisEvent.mediawiki
@@ -32,7 +32,7 @@ You can add your code example here
 == Remarks ==
 [[SDL_JoyAxisEvent]] is a member of the [[SDL_Event]] structure and is used when an event of type SDL_JOYAXISMOTION is reported.
 
-A SDL_JOYAXISMOTION event occurs whenever a user moves an axis on the joystick.
+An SDL_JOYAXISMOTION event occurs whenever a user moves an axis on the joystick.
 
 == Related Structures ==
 :[[SDL_JoyBallEvent]]
